--- a/PERSECTIVE/Website/perspective.html
+++ b/PERSECTIVE/Website/perspective.html
@@ -12,7 +12,7 @@ html {
 	}
 body {
 	height:100%;
-	background: url('back.jpg');
+	background: url('https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/back.jpg?raw=true');
 	margin:0;
 	background-repeat:no-repeat;
 	background-size:cover;
