--- a/PERSECTIVE/Website/WORKS.html
+++ b/PERSECTIVE/Website/WORKS.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <head>
 	<title>Perspective|WORKS</title>
-	<script src="\Users\Vidhya Judith\Desktop\NOTES\WEB DEV\jquery.js" type='text/javascript'></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet">
 <style>
 body {
 	font-family:'Recursive', sans-serif;
@@ -135,47 +134,47 @@ img {
 
 <div class="myslides">
 	<div class="numtext">1/11</div>
-	<img src="travel3.png" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/travel3.png?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">2/11</div>
-	<img src="cheetha.jpg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/cheetha.jpg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">3/11</div>
-	<img src="tiger.jpg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/tiger.jpg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">4/11</div>
-	<img src="flower.jpeg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/flower.jpeg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">5/11</div>
-	<img src="travel1.jpg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/travel1.jpg?raw=truepg" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">6/11</div>
-	<img src="travel2.png" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/travel2.png?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">7/11</div>
-	<img src="elephant.jpg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/elephant.jpg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">8/11</div>
-	<img src="bee.jpeg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/bee.jpeg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">9/11</div>
-	<img src="dragon.jpeg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/dragon.jpeg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">10/11</div>
-	<img src="cheetha2.jpg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/cheetha2.jpg?raw=true" style="width:100%">
 </div>
 <div class="myslides">
 	<div class="numtext">11/11</div>
-	<img src="bw.jpg" style="width:100%">
+	<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/bw.JPG?raw=true" style="width:100%">
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a><!--10094 is < UNICODE -->
@@ -188,37 +187,37 @@ img {
 <!--Thumbnail Images-->
 <div class="row">
 	<div class="coloumn">
-	 <img class="demo cursor" src="travel3.png" style="width:100%" onclick="currentSlide(1)" alt="The Sea">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/travel3.png?raw=true" style="width:100%" onclick="currentSlide(1)" alt="The Sea">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="cheetha.jpg" style="width:100%" onclick="currentSlide(2)" alt="A Cheetah">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/cheetha.jpg?raw=true" style="width:100%" onclick="currentSlide(2)" alt="A Cheetah">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="tiger.jpg" style="width:100%" onclick="currentSlide(3)" alt="Tiger">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/tiger.jpg?raw=true" style="width:100%" onclick="currentSlide(3)" alt="Tiger">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="flower.jpeg" style="width:100%" onclick="currentSlide(4)" alt="Flowers">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/flower.jpeg?raw=true" style="width:100%" onclick="currentSlide(4)" alt="Flowers">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="travel1.jpg" style="width:100%" onclick="currentSlide(5)" alt="Sunset by the Sea">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/travel1.jpg?raw=true" style="width:100%" onclick="currentSlide(5)" alt="Sunset by the Sea">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="travel2.png" style="width:100%" onclick="currentSlide(6)" alt="Sunset">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/travel2.png?raw=true" style="width:100%" onclick="currentSlide(6)" alt="Sunset">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="elephant.jpg" style="width:100%" onclick="currentSlide(7)" alt="Chained Elephant">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/elephant.jpg?raw=true" style="width:100%" onclick="currentSlide(7)" alt="Chained Elephant">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="bee.jpeg" style="width:100%" onclick="currentSlide(8)" alt="A Bee">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/bee.jpeg?raw=true" style="width:100%" onclick="currentSlide(8)" alt="A Bee">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="dragon.jpeg" style="width:100%" onclick="currentSlide(9)" alt="A Dragonfly">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/dragon.jpeg?raw=true" style="width:100%" onclick="currentSlide(9)" alt="A Dragonfly">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="cheetha2.jpg" style="width:100%" onclick="currentSlide(10)" alt="Cheetah">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/cheetha2.jpg?raw=true" style="width:100%" onclick="currentSlide(10)" alt="Cheetah">
     </div>
 	<div class="coloumn">
-	 <img class="demo cursor" src="bw.jpg" style="width:100%" onclick="currentSlide(11)" alt="The Sky">
+	 <img class="demo cursor" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/bw.JPG?raw=true" style="width:100%" onclick="currentSlide(11)" alt="The Sky">
     </div>
 </div>
 </div>
