--- a/PERSECTIVE/Website/CONTACT.html
+++ b/PERSECTIVE/Website/CONTACT.html
@@ -12,7 +12,7 @@ html {
 body {
 	height:100%;
 	font-family: 'Recursive', sans-serif;
-	background: url('back.jpg');
+	background: url('https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/back.jpg?raw=true');
 	margin:0;
 	background-repeat:no-repeat;
 	background-size:cover;
@@ -114,17 +114,17 @@ font-size: 12px;
 </div>
 <p class="about">Hello! My name is Yathin, I'm currently pursuing my Bachelors in Hotel Management and have a strong passion for food and photography. Excited to get in touch with you!</p>
 <div class="links">
-<a href="https://instagram.com"><img class="logo" src="insta.png" alt="Instagram"></a>
-<a href="mailto:yathin563@gmail.com"><img class="logo" src="mail.png" alt="Email"></a>
-<a href="https://facebook.com"><img class="logo" src="fb.png" alt="Facebook"></a>
+<a href="https://instagram.com"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/insta.png?raw=true" alt="Instagram"></a>
+<a href="mailto:yathin563@gmail.com"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/mail.png?raw=true" alt="Email"></a>
+<a href="https://facebook.com"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/fb.png?raw=true" alt="Facebook"></a>
 </div>
 </div>
 <div class="home"><a class="homelink" href="perspective.html">Back to HOME</a></div>
 <div class="design">
 	<p>Website Designed By: Vidhya Judith<br /><small><u>Contact Me</u></small></p>
-	<a href="https://www.linkedin.com/in/vidhya-judith-09172919b"><img class="logo" src="linkedin.png" alt="LinkedIn"></a>
-	<a href="mailto:vidhya.zorro@gmail.com"><img class="logo" src="mail2.png" alt="Email"></a>
-	<a href="https://github.com/vidhyajudith"><img class="logo" src="github.png" alt="Github"></a>
+	<a href="https://www.linkedin.com/in/vidhya-judith-09172919b"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/linkedin.png?raw=true" alt="LinkedIn"></a>
+	<a href="mailto:vidhya.zorro@gmail.com"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/mail2.png?raw=true" alt="Email"></a>
+	<a href="https://github.com/vidhyajudith"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/github.png?raw=true" alt="Github"></a>
 </div>
 </div>
 </body>
