--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Perspective|HOME</title>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<style>
+html { 
+	height:100%;
+	margin:0;
+	}
+body {
+	height:100%;
+	background: url('https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/back.jpg?raw=true');
+	margin:0;
+	background-repeat:no-repeat;
+	background-size:cover;
+	}
+.main {
+	height:100%;
+	margin:0;
+	background:rgba(0,0,0,0.9);
+	}
+h1 {
+	font-family: 'Poiret One',cursive;
+	font-size: 45px;
+	color: white;
+	width:500px;
+	text-align: center;
+	margin: 0 auto;
+	padding:0;
+	position: relative;
+	top:200px
+	}
+ul{
+	position: relative;
+	top:30px;
+	width:250px;
+	margin:0 auto;
+	}
+li { 
+	display:inline;
+	}
+
+.quote {
+	font-family: 'Dancing Script', sans-serif;
+	color: white;
+	font-size:25px;
+	text-align:center;
+	width:900px;
+	margin:100px auto;
+	position:relative;
+	top:100px;
+
+}
+a {	
+	font-family: 'Recursive', sans-serif;
+	font-size:20px;
+	padding:10px;
+	margin-right:5px;
+	border:2px solid white;
+	border-radius:20px;
+	text-decoration:none;
+	color:#FFF;
+	}
+
+a:hover {
+	background: #FFF;
+	color: #000;
+	}
+@media (max-width:500px) {
+h1 {
+	font-size:30px;
+	}
+.quote {
+	width:300px;
+	font-size:18px;
+	}
+}
+</style>
+</head>
+<body>
+<div class="main">
+<h1>PERSPECTIVE</h1>
+<div class="quote">
+<p>The question is not what you look at, but what you see.<small>-H.T</small></p>
+</div>
+<ul>
+	<li><a href="/PERSPECTIVE/websites/WORKS.html">WORKS</a></li>
+	<li><a href="/PERSPECTIVE/websitesCONTACT.html">CONTACT</a></li>
+</ul>
+</div>
+</body>
+</html>
