--- a/PERSECTIVE/Website/WORKS.html
+++ b/PERSECTIVE/Website/WORKS.html
@@ -221,7 +221,7 @@ img {
     </div>
 </div>
 </div>
-<div class="home"><a class="homelink" href="perspective.html">Back to HOME</a></div>
+<div class="home"><a class="homelink" href="https://github.com/vidhyajudith/perspective-portfolio/blob/master/index.html">Back to HOME</a></div>
 <script>
 var slideIndex=1;
 showSlides(slideIndex);
