--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ h1 {
 <p>The question is not what you look at, but what you see.<small>-H.T</small></p>
 </div>
 <ul>
-	<li><a href="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Website/WORKS.html">WORKS</a></li>
-	<li><a href="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Website/CONTACT.html">CONTACT</a></li>
+	<li><a href="WORKS.html">WORKS</a></li>
+	<li><a href="CONTACT.html">CONTACT</a></li>
 </ul>
 </div>
 </body>
