--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ h1 {
 </div>
 <ul>
 	<li><a href="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Website/WORKS.html">WORKS</a></li>
-	<li><a href="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Website/CONTACT.html">CONTACT</a></li>
+	<li><a href="CONTACT.html">CONTACT</a></li>
 </ul>
 </div>
 </body>
