--- a/CONTACT.html
+++ b/CONTACT.html
@@ -110,7 +110,7 @@ font-size: 12px;
 <h1>CONTACT</h1>
 <div class="contents">
 <div class= "image">
-<img src="face.jpg" class="me">
+<img src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/face.jpg?raw=true" class="me">
 </div>
 <p class="about">Hello! My name is Yathin, I'm currently pursuing my Bachelors in Hotel Management and have a strong passion for food and photography. Excited to get in touch with you!</p>
 <div class="links">
