--- a/CONTACT.html
+++ b/CONTACT.html
@@ -119,7 +119,7 @@ font-size: 12px;
 <a href="https://facebook.com"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/fb.png?raw=true" alt="Facebook"></a>
 </div>
 </div>
-<div class="home"><a class="homelink" href="https://github.com/vidhyajudith/perspective-portfolio/blob/master/index.html">Back to HOME</a></div>
+<div class="home"><a class="homelink" href="index.html">Back to HOME</a></div>
 <div class="design">
 	<p>Website Designed By: Vidhya Judith<br /><small><u>Contact Me</u></small></p>
 	<a href="https://www.linkedin.com/in/vidhya-judith-09172919b"><img class="logo" src="https://github.com/vidhyajudith/perspective-portfolio/blob/master/PERSECTIVE/Images/linkedin.png?raw=true" alt="LinkedIn"></a>
