--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ h1 {
 <p>The question is not what you look at, but what you see.<small>-H.T</small></p>
 </div>
 <ul>
-	<li><a href="WORK.html">WORKS</a></li>
+	<li><a href="/WORK.html">WORKS</a></li>
 	<li><a href="/CONTACT.html">CONTACT</a></li>
 </ul>
 </div>
