--- a/WORKS.html
+++ b/WORKS.html
@@ -221,7 +221,7 @@ img {
     </div>
 </div>
 </div>
-<div class="home"><a class="homelink" href="/index.html">Back to HOME</a></div>
+<div class="home"><a class="homelink" href="index.html">Back to HOME</a></div>
 <script>
 var slideIndex=1;
 showSlides(slideIndex);
